--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,24 @@
 .centered {
     margin: 0 auto;
 }
+.abbre {
+    line-height: 48px;
+    color: #ffffff;
+    width: 45px;
+    height: 45px;
+    display: inline-block;
+    font-weight: 500;
+    text-align: center;
+    border-radius: 100%;
+    background: #1445a6;
+}
+tr {
+    line-height: 48px;
+}
+
+.status {
+    font-size: 13px;
+}
 
 .m-portlet.m-portlet--tab, .topheader {
     width: 80%;
