--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -12,7 +12,7 @@
                 <div class="m-stack__item m-brand  m-brand--skin-dark " >
                     <div class="m-stack m-stack--ver m-stack--general">
                         <div class="m-stack__item m-stack__item--middle m-brand__logo">
-                            <a href="index.html" class="m-brand__logo-wrapper">
+                            <a href="/" class="m-brand__logo-wrapper">
                             <h3 class="text-white">#saveIT</h3>
                             </a>
                         </div>
